# vllm-tgis-adapter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  OWNERS  README.md  noxfile.py  pyproject.toml  setup.py  update_generation_pb2
.github/: dependabot.yml
.github/scripts/: install_vllm_build_deps.py
.github/workflows/: image.yml  pr_tests.yaml  pre-commit-autoupdate.yml  release.yaml  release.yaml.disabled  tests.yaml
examples/: README.md  generation.proto  inference.py  inference.sh
src/vllm_tgis_adapter/: __main__.py  api_server.py  healthcheck.py  http.py  logging.py  utils.py
src/vllm_tgis_adapter/grpc/: __init__.py  adapters.py  grpc_server.py  validation.py
src/vllm_tgis_adapter/grpc/pb/: .gitignore  __init__.py  generation.proto  generation_pb2.pyi
src/vllm_tgis_adapter/tgis_utils/: args.py  convert_pt_to_prompt.py  guided_decoding.py  hub.py  logits_processors.py  logs.py  metrics.py  monkey_patch.py  scripts.py  structured_outputs.py
tests/: conftest.py  test_adapters.py  test_grpc_server.py  test_http_server.py  test_hub.py  test_init.py  test_peft_converter.py  test_termination_log.py  test_tgis_utils.py  utils.py
tests/fixtures/bloom_sentiment_1/: adapter_config.json
tests/fixtures/granite-3b-code-instruct-lora/: README.md  adapter_config.json  adapter_model.safetensors
tests/fixtures/twitter-pa/: adapter_config.json
